reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_optional_fields.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::enums::input::Thing"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::enums::output::Thing"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::input::Thing",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "variant",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::input::VariantBody"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "named",
            "fields": {
              "named": [
                {
                  "name": "amount",
                  "type": {
                    "name": "std::option::Option",
                    "arguments": [
                      {
                        "name": "std::string::String"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::input::VariantBody",
        "fields": {
          "named": [
            {
              "name": "amount",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "always_null_on_wire",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::output::Thing",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "variant",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::output::VariantBody"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "named",
            "fields": {
              "named": [
                {
                  "name": "amount",
                  "type": {
                    "name": "std::option::Option",
                    "arguments": [
                      {
                        "name": "std::string::String"
                      }
                    ]
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::output::VariantBody",
        "fields": {
          "named": [
            {
              "name": "amount",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              }
            },
            {
              "name": "always_null_on_wire",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
