reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_tuple_variants-3.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_rust_code :: < E > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::enums::E,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::enums::E,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod enums {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub enum A {
                    X,
                    Y,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                #[serde(tag = "type")]
                pub enum E {
                    #[serde(rename = "a")]
                    A(super::super::super::reflectapi_demo::tests::enums::A),
                }
            }
        }
    }
}
