reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_tuple_variants.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::A",
        "variants": [
          {
            "name": "X",
            "fields": "none"
          },
          {
            "name": "Y",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::A"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::A",
        "variants": [
          {
            "name": "X",
            "fields": "none"
          },
          {
            "name": "Y",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::A"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      }
    ]
  }
}
