reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_user_defined_types-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_typescript_code::<E>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.enums.E,
      headers: {},
    ) => AsyncResult<reflectapi_demo.tests.enums.E, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export type A = "X" | "Y" | "Z";

      export interface B {
        p: string;
        q: number /* f64 */;
      }

      export type E =
        | ({ tag: "a" } & reflectapi_demo.tests.enums.B)
        | ({ tag: "b" } & reflectapi_demo.tests.enums.A)
        | {
            tag: "c";
            items: Array<string>;
            value: number /* f64 */;
          }
        | { tag: "d" };
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (input: reflectapi_demo.tests.enums.E, headers: {}) =>
      __request<
        reflectapi_demo.tests.enums.E,
        {},
        reflectapi_demo.tests.enums.E,
        {}
      >(client, "/inout_test", input, headers);
  }
}
